--- a/app/locale/swe/LC_MESSAGES/default.po
+++ b/app/locale/swe/LC_MESSAGES/default.po
@@ -1,18 +1,15 @@
-# LANGUAGE translation of CakePHP Application
-# Copyright YEAR NAME <EMAIL@ADDRESS>
-#
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PROJECT VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2010-11-19 12:40+0100\n"
-"PO-Revision-Date: YYYY-mm-DD HH:MM+ZZZZ\n"
-"Last-Translator: NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: \n"
+"Last-Translator: Joachim Nyqvist <Joachim@JNyqvist.se>\n"
+"Language-Team: \n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
+"X-Poedit-Language: Swedish\n"
+"X-Poedit-Country: SWEDEN\n"
 
 #: /controllers/items_controller.php:44
 msgid "Index"
@@ -44,39 +41,39 @@ msgstr ""
 
 #: /views/themed/default/items/index.ctp:25
 msgid "Actors:"
-msgstr ""
+msgstr "Skådespelare:"
 
 #: /views/themed/default/items/index.ctp:40
 msgid "Genre:"
-msgstr ""
+msgstr "Genre:"
 
 #: /views/themed/default/items/index.ctp:55
 msgid "Director:"
-msgstr ""
+msgstr "Regissör:"
 
 #: /views/themed/default/items/index.ctp:65
 msgid "Previous"
-msgstr ""
+msgstr "Föregående"
 
 #: /views/themed/default/items/index.ctp:66
 msgid "Next"
-msgstr ""
+msgstr "Nästa"
 
 #: /views/themed/default/items/index.ctp:67
 msgid "Page %page% of %pages%"
-msgstr ""
+msgstr "Sida %page% av %pages%"
 
 #: /views/themed/default/users/admin.ctp:3
 msgid "Language"
-msgstr ""
+msgstr "Språk"
 
 #: /views/themed/default/users/admin.ctp:4
 msgid "Continue"
-msgstr ""
+msgstr "Fortsätt"
 
 #: /views/themed/default/users/admin.ctp:5
 msgid "Cancel"
-msgstr ""
+msgstr "Avbryt"
 
 #: /webroot/test.php:88
 msgid "Debug setting does not allow access to this url."
